--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             border-width: medium;
         }
         body {
-            background: url(http://img14.deviantart.net/860e/i/2012/041/e/a/minimalistic_wallpaper_by_nesiory-d4paf50.jpg) no-repeat;
+            background: url(https://img14.deviantart.net/860e/i/2012/041/e/a/minimalistic_wallpaper_by_nesiory-d4paf50.jpg) no-repeat;
             opacity: 0.8;
             background-attachment: fixed;
             background-size: cover;
